# Distributed-K-Means-Dask

./: Kmeans||_test.ipynb  README.md
Test_Sparse/: Test_dask_sparse.ipynb
Test_Sparse/.ipynb_checkpoints/: Test_dask_sparse-checkpoint.ipynb
kmeans_parallel_dask/: README.md  pyproject.toml
kmeans_parallel_dask/src/kmeans_parallel_dask/: __init__.py  kmeans_parallel.py
kmeans_parallel_dask/src/kmeans_parallel_dask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kmeans_parallel_dask/tests/: test_basic.py
