[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans_parallel_dask"
version = "0.1.0"
description = "K-means|| (k-means parallel) initialization and Lloyd steps on Dask arrays"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["dask", "clustering", "kmeans", "parallel", "k-means||"]

dependencies = [
  "dask[array]>=2024.5.0",
  "dask-ml>=2024.4.4",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
