[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans_parallel_dask"
version = "0.1.0"
description = "K-means|| init and Lloyd steps on Dask arrays"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "dask[array]>=2024.1.0",
  "dask-ml>=2024.3.0",
  "scikit-learn>=1.1",
]
